fixed layout bugs

--- a/index.scss
+++ b/index.scss
@@ -73,8 +73,8 @@ iframe {
         transition: top .6s 1s, left .6s 1s, right .6s 1s, bottom .6s 1s, opacity .2s 1s;
       }
       &.about {
-        top: 2em !important;
-        height: calc(100% - 2em) !important;
+        top: 59px !important;
+        height: calc(100% - 59px) !important;
       }
     }
   }
@@ -112,8 +112,8 @@ iframe {
       #burger {
         // transition: bottom 1s, width 1s, height 1s;
         transition: bottom 0.5s, width 0.5s, height 0.5s;
-        bottom: calc(100% - 1.75em);
-        height: 1.5em !important;
+        bottom: calc(100% - 59px);
+        height: 59px !important;
         width: 100% !important;
         .block {
           width: 4.8%;
@@ -170,11 +170,11 @@ iframe {
       color: #808080;
     }
     @media (max-width: 680px) {
-      font-size: 12pt;
-      line-height: 18.6pt;
+      font-size: 12px;
+      line-height: 18.6px;
       &.chosen {
         transition: opacity 0s 0s;
-        top: 0.3em !important;
+        top: 22px !important;
         bottom: unset !important;
         left: 50% !important;
         transform: translateX(-50%);
@@ -207,7 +207,7 @@ iframe {
         top: unset;
         right: unset;
         left: 6vw;
-        bottom: 10%;
+        bottom: 11%;
       }
     }
     &.participants {
@@ -217,7 +217,7 @@ iframe {
         top: unset;
         right: unset;
         left: 6vw;
-        bottom: 2.5%;
+        bottom: 3.5%;
       }
     }
   }
@@ -248,7 +248,8 @@ iframe {
       transform: none;
       flex-flow: column nowrap;
       align-items: flex-start;
-      padding: 0 4vw;
+      padding: 18px 4vw;
+      box-sizing: border-box;
       // background-color: rgb(25, 25, 25);
     }
     .block {
@@ -263,7 +264,8 @@ iframe {
       // }
       @media (max-width: 680px) {
         width: 90%;
-        height: 15vh;
+        display: inline-block;
+        height: 10px;
         margin: 0px;
         border-bottom: 1px solid rgb(230, 230, 230);
         position: relative;
